@@ -1,11 +1,13 @@
 package com.graduationprojectordermanagementsystem.service.impl;
 
+import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
-import com.baomidou.mybatisplus.core.conditions.update.UpdateWrapper;
 import com.graduationprojectordermanagementsystem.contents.StatusContent;
 import com.graduationprojectordermanagementsystem.mapper.MajorMapper;
+import com.graduationprojectordermanagementsystem.mapper.UserMajorMapper;
 import com.graduationprojectordermanagementsystem.pojo.dto.MajorDTO;
 import com.graduationprojectordermanagementsystem.pojo.entity.Major;
+import com.graduationprojectordermanagementsystem.pojo.entity.UserMajor;
 import com.graduationprojectordermanagementsystem.pojo.vo.MajorVO;
 import com.graduationprojectordermanagementsystem.service.MajorService;
 import jakarta.annotation.Resource;
@@ -13,13 +15,19 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 public class MajorServiceImpl implements MajorService {
     @Resource
     private MajorMapper majorMapper;
+    @Resource
+    private UserMajorMapper userMajorMapper;
 
     /**
      * 添加专业信息
@@ -47,19 +55,47 @@ public class MajorServiceImpl implements MajorService {
     @Override
     public List<MajorVO> getAllMajor() {
         log.info("开始查询所有专业信息");
-        //1.查询所有专业实体
-        List<Major> majorList = majorMapper.selectList(null);//查询所有
+        // 1. 查询所有专业
+        List<Major> majorList = majorMapper.selectList(null);
+        log.info("共查询到 {} 条专业数据", majorList.size());
 
-        log.info("共查询到 {} 条专业数据", majorList.size()); // 👈 增加数量日志
-        //2.转换为VO列表
+        if (majorList.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        // 2. 提取所有专业 ID
+        List<Long> majorIds = majorList.stream()
+                .map(Major::getId)
+                .toList();
+
+        // 3. 使用 UserMajorMapper 统计每个专业的被喜欢/收藏次数
+        //    查询：user_major 表中 major_id 在 majorIds 中的记录，按 major_id 分组统计
+        List<Map<String, Object>> countResult = userMajorMapper.selectMaps(
+                new QueryWrapper<UserMajor>()
+                        .select("major_id, COUNT(*) as like_count")
+                        .in("major_id", majorIds)
+                        .groupBy("major_id")
+        );
+
+        // 4. 将结果转为 Map<majorId, likeCount>
+        Map<Long, Long> likeCountMap = new HashMap<>();
+        for (Map<String, Object> row : countResult) {
+            Long majorId = ((Number) row.get("major_id")).longValue();
+            Long count = ((Number) row.get("like_count")).longValue();
+            likeCountMap.put(majorId, count);
+        }
+
+        // 5. 构造 VO：如果某个专业没有被收藏，likeCount 默认为 0
         return majorList.stream()
                 .map(major -> new MajorVO(
                         major.getId(),
                         major.getMajorName(),
                         major.getMajorCode(),
                         major.getMajorDesc(),
-                        major.getMajorStatus()))
-                .toList();//返回VO列表
+                        likeCountMap.getOrDefault(major.getId(), 0L), // 不存在则为 0
+                        major.getMajorStatus()
+                ))
+                .collect(Collectors.toList());
     }
 
     /**
